ves-middle/tests/t16_struct_doesnt_declare_as_sub_expr.test
let s = (struct A {});
s();
A(); // undefined

%output

error: Undefined variable `A`
  ┌─ <source: #7a1410220645f47c>:3:1
  │
3 │ A(); // undefined
  │ ^

warning: Variable `A` is never used
  ┌─ <source: #7a1410220645f47c>:1:17
  │
1 │ let s = (struct A {});
  │                 ^
  │                 │
  │                 help: if this is intentional, replace or prefix it with an underscore: `_A`